--- a/notebooks/iceberg_query_lifecycle.ipynb
+++ b/notebooks/iceberg_query_lifecycle.ipynb
@@ -180,6 +180,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "725ebde4-0aeb-42e1-9284-57f16ae1938d",
+   "metadata": {},
+   "source": [
+    "**namespace** serves as a logical container or grouping mechanism for tables, similar to schemas in traditional databases. Namespaces help organize tables hierarchically and provide isolation between different data domains."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "0bf09ac9-710c-49c1-bab1-a8c689720f8c",
@@ -229,7 +237,6 @@
     }
    ],
    "source": [
-    "# \n",
     "spark.sql(\"SHOW NAMESPACES IN default\").toPandas()"
    ]
   },
@@ -461,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "8cdd639a-7eb2-4ba0-a1a3-8c90e268e44e",
    "metadata": {},
    "outputs": [
@@ -523,7 +530,7 @@
        "[0 rows x 21 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
