--- a/notebooks/iceberg_query_lifecycle.ipynb
+++ b/notebooks/iceberg_query_lifecycle.ipynb
@@ -5,7 +5,7 @@
    "id": "f49a9dac-5791-45e3-bd4e-68c46e753924",
    "metadata": {},
    "source": [
-    "# Query Lifecycle"
+    "# The Query Lifecycle in Iceberg"
    ]
   },
   {
@@ -91,7 +91,7 @@
     "\n",
     "This is a newly created table without any data yet.\n",
     "    \n",
-    "**location of the metadata file:** warehouse/default/db/orders/metadata/00000-34f871b7-5f96-4abb-abfc-0a6bd70d20d1.metadata.json\n",
+    "**location of the metadata file:** warehouse/default/db/orders/metadata/v1.metadata.json\n",
     "\n",
     "```json\n",
     "{\n",
@@ -176,7 +176,8 @@
    "id": "b0d0b4da-23a0-4ae9-a462-d0ff8ce89b27",
    "metadata": {},
    "source": [
-    "### Useful Queries to Inspect Tables Metadata\n"
+    "### Useful Queries to Inspect Tables Metadata\n",
+    "Note: I am using toPandas() method to display the table in a readable manner"
    ]
   },
   {
