--- a/notebooks/iceberg_query_lifecycle.ipynb
+++ b/notebooks/iceberg_query_lifecycle.ipynb
@@ -60,30 +60,24 @@
     "\n",
     "    - format-version: Schema version (2)\n",
     "    - table-uuid: Unique identifier\n",
-    "    - location: S3 storage path\n",
-    "\n",
+    "    - location: storage path\n",
     "\n",
     "**Schema definition:**\n",
     "    - Field specifications with IDs, names, types\n",
-    "    - decimal(10,2) for order_amount: 10 total digits with 2 after decimal point\n",
-    "\n",
     "\n",
     "**Partitioning:**\n",
     "    \n",
     "    - Partitioned by hour of order_ts\n",
     "    - Source ID 4 maps to order_ts field\n",
     "\n",
-    "\n",
     "**Table properties:**\n",
     "\n",
-    "    - Compression codec: zstd\n",
-    "    - Owner: root\n",
-    "\n",
+    "    - Compression codec\n",
+    "    - Owner\n",
     "\n",
     "**Snapshot tracking:**\n",
     "    - current-snapshot-id: -1 indicates no data loaded yet\n",
     "    - Empty snapshots array confirms no data\n",
-    "\n",
     "\n",
     "**Timestamps:**\n",
     "\n",
@@ -185,7 +179,7 @@
    "id": "725ebde4-0aeb-42e1-9284-57f16ae1938d",
    "metadata": {},
    "source": [
-    "**namespace** serves as a logical container or grouping mechanism for tables, similar to schemas in traditional databases. Namespaces help organize tables hierarchically and provide isolation between different data domains."
+    "**Namespaces** serve as a logical container or grouping mechanism for tables, similar to schemas in traditional databases. Namespaces help organize tables hierarchically and provide isolation between different data domains."
    ]
   },
   {
